# hts-synth

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AIMS-DAY1-SUMMARY.md  Day1-Whiteboard.HEIC  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  scratch-api.py  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: hts_synth.doctree  hts_synth.models.doctree  hts_synth.providers.doctree  hts_synth.reads.doctree  hts_synth.ref.doctree  hts_synth.utils.doctree  hts_synth.wrappers.doctree
.doctrees/user_docs/: users_docs.cli-interface.doctree  users_docs.doctree  users_docs.faker-interface.doctree
.github/workflows/: codeql.yml  github-pages.yml  linting.yml  pip-audit.yml  secrets.yml  semgrep.yml  typing.yml  unittests.yml
_modules/: index.html
_sources/: index.rst.txt
_sources/api/: hts_synth.models.rst.txt  hts_synth.providers.rst.txt  hts_synth.reads.rst.txt  hts_synth.rst.txt
_sources/user_docs/: users_docs.faker-interface.rst.txt
_static/: documentation_options.js
api/: hts_synth.html  hts_synth.models.html  hts_synth.providers.html  hts_synth.reads.html  hts_synth.ref.html  hts_synth.utils.html  hts_synth.wrappers.html
docs/source/: conf.py  index.rst
examples/: quality_score_models.ipynb  read_generation.py  reference.py  run_variant_generation.py
examples/models/: qual_model.py
hts-synth/faker_provider/: provider.py
hts-synth/ref/: README.md  generate_variant.py  seq_converter.py  variant.py
hts_synth/: hts_synth.py
hts_synth/constraints/: edit.py
hts_synth/models/: error_model.py  qual_model.py  read.py  read_generator.py
hts_synth/providers/: mutated_sequence_provider.py  read_provider.py
hts_synth/reads/: __init__.py  read_generator.py
hts_synth/ref/: constraints.py  enums.py  generate_variant.py  reference.py  run_variant_generation.py  seq_converter.py  utils.py  variant.py
tests/: conftest.py  test_hts_synth.py  test_mutate_provider.py  test_provider.py  test_read_provider.py
user_docs/: users_docs.cli-interface.html  users_docs.faker-interface.html  users_docs.html
(+29 files in other folders)
