[build-system]
requires = ["setuptools >= 77.0.3", "Faker>=18.0.0", "pytest>=8.4.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["hts_synth*"]

[project]
name = "hts-synth"
version = "0.0.0-alpha0"
description = "constrained generators for synthetic hts data"
authors = [
  {name = "Alex Byrne"}
]
license = "MIT"
readme = "README.md"
dependencies = [
  "pysam>=0.22, ==0.*",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
dev = [
  "pytest==8.*",
  "pytest-cov==6.*"
]

[tool.ruff]
line-length = 100
extend-exclude = ["scratch-api.py"]

[tool.ruff.lint]
select = [
    # Default rules
    "E4",
    "E7",
    "E9",
    "F",
    # Additional rules
    "I",    # Import order
    "D",    # Docstrings
    "D401", # First line should be in imperative mood
    "D213", # Multi-line docstring summary should start at the second line
    "C",    # Complexity
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D417", # Missing argument descriptions in the docstring
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"**/*/__init__.py" = ["D"]

[tool.pyright]
failOnWarnings = false
ignore = ["scratch-api.py"]
reportAny = false
reportExplicitAny = false
reportUnnecessaryIsInstance = false
